Verificação de requests
